--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 TODO
 
+# GameKit
+
+• TODO: Fix buttons
+
 # High priority
 
 • DONE: *MANDATORY:* Limit game to 5 players (blue, red, green, cyan, magenta)
